--- a/Convertisseur/nbproject/private/private.properties
+++ b/Convertisseur/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Jeremy\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=C:\\Users\\yannc\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
